--- a/index.html
+++ b/index.html
@@ -29,50 +29,37 @@
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="d-flex flex-column">
-      <!-- <div class="profile d-block d-md-none">
-          <img
-            src="assets/img/profile-img.webp"
-            alt=""
-            class="img-fluid rounded-circle"
-          />
-          <h1 class="text-light"><a href="index.html">Phan Trung Kiet</a></h1>
-          <div class="social-links mt-3 text-center">
-            <a href="mailto:kietpt8627@gmail.com" target="_blank" class="email"
-              ><i class="bx bx-envelope"></i
-            ></a>
-            <a href="https://www.instagram.com/kietr.phn86/" target="_blank" class="instagram"
-              ><i class="bx bxl-instagram"></i
-            ></a>
-            <a href="https://github.com/kiet8627" target="_blank" class="github"
-              ><i class="bx bxl-github"></i
-            ></a>
-          </div>
+      <div class="profile d-block d-md-none">
+        <img src="assets/img/profile-img.webp" alt="" class="img-fluid rounded-circle" />
+        <h1 class="text-light"><a href="index.html">Phan Trung Kiet</a></h1>
+        <div class="social-links mt-3 text-center">
+          <a href="mailto:kietpt8627@gmail.com" target="_blank" class="email"><i class="bx bx-envelope"></i></a>
+          <a href="https://github.com/kiet8627" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/kietphan86/" target="_blank" class="linkedin"><i
+              class="bx bxl-linkedin"></i></a>
+          <a href="https://www.instagram.com/kietr.phn86/" target="_blank" class="instagram"><i
+              class="bx bxl-instagram"></i></a>
+          <a href="https://www.facebook.com/kietphan86/" target="_blank" class="facebook"><i
+              class="bx bxl-facebook"></i></a>
         </div>
+      </div>
 
-        <nav id="navbar" class="nav-menu navbar d-block d-lg-none">
-          <ul>
-            <li>
-              <a href="#hero" class="nav-link scrollto active"
-                ><i class="bx bx-home"></i> <span>Home</span></a
-              >
-            </li>
-            <li>
-              <a href="#about" class="nav-link scrollto"
-                ><i class="bx bx-user"></i> <span>About</span></a
-              >
-            </li>
-            <li>
-              <a href="#achievements" class="nav-link scrollto"
-                ><i class="bx bx-trophy"></i> <span>Achievements</span></a
-              >
-            </li>
-            <li>
-              <a href="#portfolio" class="nav-link scrollto"
-                ><i class="bx bx-book-content"></i> <span>Projects</span></a
-              >
-            </li>
-          </ul>
-        </nav> -->
+      <nav id="navbar" class="nav-menu navbar d-block d-lg-none">
+        <ul>
+          <li>
+            <a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a>
+          </li>
+          <li>
+            <a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a>
+          </li>
+          <li>
+            <a href="#achievements" class="nav-link scrollto"><i class="bx bx-trophy"></i> <span>Achievements</span></a>
+          </li>
+          <li>
+            <a href="#portfolio" class="nav-link scrollto"><i class="bx bx-photo-album"></i> <span>Activities</span></a>
+          </li>
+        </ul>
+      </nav>
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-3 navbar-custom" id="navbar">
         <div class="container">
           <a href="index.html" class="navbar-brand">Phan Trung Kiet</a>
@@ -485,15 +472,17 @@
                     <img src="assets/img/activities/robotics/img/grab&lift.jpg" title="Grab & lift mechanism">
                     <img src="assets/img/activities/robotics/run/flower.gif" title="Grabbing a flower">
                     <img src="assets/img/activities/robotics/img/bottom-view.png" title="Bottom view of the robot">
-                    <img src="assets/img/activities/robotics/run/dwater.gif" title="Detecting and keeping drinkable water">
-                    <img src="assets/img/activities/robotics/img/CEs.png" title="New (left) and old (right) versions of construction equipment">
+                    <img src="assets/img/activities/robotics/run/dwater.gif"
+                      title="Detecting and keeping drinkable water">
+                    <img src="assets/img/activities/robotics/img/CEs.png"
+                      title="New (left) and old (right) versions of construction equipment">
                     <img src="assets/img/activities/robotics/run/newCE.gif" title="Using new construction equipment">
                     <img src="assets/img/activities/robotics/cert/cert.jpg" title="Certification">
                   </div>
                 </div>
 
                 <a href="https://github.com/kiet8627/" target="_blank" title="Source code"><i
-                  class="bx bx-code-alt"></i></a>
+                    class="bx bx-code-alt"></i></a>
               </div>
             </div>
           </div>
