--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <header id="header">
     <div class="d-flex flex-column">
       <div class="profile d-block d-md-none">
-        <img src="assets/img/profile-img.webp" alt="" class="img-fluid rounded-circle" />
+        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle" />
         <h1 class="text-light"><a href="index.html">Phan Trung Kiet</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="mailto:kietpt8627@gmail.com" target="_blank" class="email"><i class="bx bx-envelope"></i></a>
