--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <header id="header">
     <div class="d-flex flex-column">
       <div class="profile d-block d-md-none">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle" />
+        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle" loading="lazy"/>
         <h1 class="text-light"><a href="index.html">Phan Trung Kiet</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="mailto:kietpt8627@gmail.com" target="_blank" class="email"><i class="bx bx-envelope"></i></a>
@@ -142,7 +142,7 @@
 
         <div class="row justify-content-between">
           <div class="col-md-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid dim" alt="" />
+            <img src="assets/img/profile-img.jpg" class="img-fluid dim" alt="" loading="lazy"/>
           </div>
           <div class="col-md-8 pt-4 pt-md-0 content" data-aos="fade-left">
             <h3>Profile</h3>
@@ -411,7 +411,7 @@
           <!-- Weather station -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-project">
             <div class="portfolio-wrap">
-              <img src="assets/img/activities/weather-station/weather-station.png" class="img-fluid" alt="" />
+              <img src="assets/img/activities/weather-station/weather-station.png" class="img-fluid" alt="" loading="lazy"/>
               <div class="portfolio-links">
                 <a href="assets/img/activities/weather-station/weather-station.png" title="More details" loading="lazy"
                   data-gallery="portfolioGallery" class="portfolio-lightbox"
@@ -437,7 +437,7 @@
           <!-- Robotics -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-robotics">
             <div class="portfolio-wrap">
-              <img src="assets/img/activities/robotics/img/robot.png" class="img-fluid" alt="" />
+              <img src="assets/img/activities/robotics/img/robot.png" class="img-fluid" alt="" loading="lazy"/>
               <div class="portfolio-links">
                 <a href="assets/img/activities/robotics/run/half-run.gif" loading="lazy" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" data-glightbox="title: NRC 2023; description: .robotics-desc"><i
@@ -469,15 +469,15 @@
                   </style>
 
                   <div class="scroll-container">
-                    <img src="assets/img/activities/robotics/img/grab&lift.jpg" title="Grab & lift mechanism">
-                    <img src="assets/img/activities/robotics/run/flower.gif" title="Grabbing a flower">
-                    <img src="assets/img/activities/robotics/img/bottom-view.png" title="Bottom view of the robot">
+                    <img src="assets/img/activities/robotics/img/grab&lift.jpg" title="Grab & lift mechanism" loading="lazy">
+                    <img src="assets/img/activities/robotics/run/flower.gif" title="Grabbing a flower" loading="lazy">
+                    <img src="assets/img/activities/robotics/img/bottom-view.png" title="Bottom view of the robot" loading="lazy">
                     <img src="assets/img/activities/robotics/run/dwater.gif"
-                      title="Detecting and keeping drinkable water">
+                      title="Detecting and keeping drinkable water" loading="lazy">
                     <img src="assets/img/activities/robotics/img/CEs.png"
-                      title="New (left) and old (right) versions of construction equipment">
-                    <img src="assets/img/activities/robotics/run/newCE.gif" title="Using new construction equipment">
-                    <img src="assets/img/activities/robotics/cert/cert.jpg" title="Certification">
+                      title="New (left) and old (right) versions of construction equipment" loading="lazy">
+                    <img src="assets/img/activities/robotics/run/newCE.gif" title="Using new construction equipment" loading="lazy">
+                    <img src="assets/img/activities/robotics/cert/cert.jpg" title="Certification" loading="lazy">
                   </div>
                 </div>
 
@@ -490,7 +490,7 @@
           <!-- Kitchen -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-volunteer">
             <div class="portfolio-wrap">
-              <img src="assets/img/activities/kitchen/volunteer.png" class="img-fluid" alt="" />
+              <img src="assets/img/activities/kitchen/volunteer.png" class="img-fluid" alt="" loading="lazy"/>
               <div class="portfolio-links">
                 <a href="assets/img/activities/kitchen/volunteer.png" title="More details" loading="lazy"
                   data-gallery="portfolioGallery" class="portfolio-lightbox"
@@ -508,7 +508,7 @@
           <!-- First aid -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-volunteer">
             <div class="portfolio-wrap">
-              <img src="assets/img/activities/first-aid/img/0.png" class="img-fluid" alt="" />
+              <img src="assets/img/activities/first-aid/img/0.png" class="img-fluid" alt="" loading="lazy"/>
               <div class="portfolio-links">
                 <a href="assets/img/activities/first-aid/first-aid-1.mp4" title="More details" loading="lazy"
                   data-gallery="portfolioGallery" class="portfolio-lightbox"
@@ -543,8 +543,8 @@
                     <video controls muted>
                       <source src="assets/img/activities/first-aid/first-aid-2.mp4" type="video/mp4" />
                     </video>
-                    <img src="assets/img/activities/first-aid/img/0.png">
-                    <img src="assets/img/activities/first-aid/img/1.jpg">
+                    <img src="assets/img/activities/first-aid/img/0.png" loading="lazy">
+                    <img src="assets/img/activities/first-aid/img/1.jpg" loading="lazy">
                   </div>
                 </div>
               </div>
