--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
           <!-- Weather station -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-project">
             <div class="portfolio-wrap">
-              <img src="assets/img/activities/weather-station/weather-station.png" class="img-fluid" alt="" loading="lazy"/>
+              <img src="assets/img/activities/weather-station/weather-station.png" class="img-fluid" alt="" />
               <div class="portfolio-links">
                 <a href="assets/img/activities/weather-station/weather-station.png" title="More details" loading="lazy"
                   data-gallery="portfolioGallery" class="portfolio-lightbox"
@@ -437,7 +437,7 @@
           <!-- Robotics -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-robotics">
             <div class="portfolio-wrap">
-              <img src="assets/img/activities/robotics/img/robot.png" class="img-fluid" alt="" loading="lazy"/>
+              <img src="assets/img/activities/robotics/img/robot.png" class="img-fluid" alt="" />
               <div class="portfolio-links">
                 <a href="assets/img/activities/robotics/run/half-run.gif" loading="lazy" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" data-glightbox="title: NRC 2023; description: .robotics-desc"><i
@@ -490,7 +490,7 @@
           <!-- Kitchen -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-volunteer">
             <div class="portfolio-wrap">
-              <img src="assets/img/activities/kitchen/volunteer.png" class="img-fluid" alt="" loading="lazy"/>
+              <img src="assets/img/activities/kitchen/volunteer.png" class="img-fluid" alt="" />
               <div class="portfolio-links">
                 <a href="assets/img/activities/kitchen/volunteer.png" title="More details" loading="lazy"
                   data-gallery="portfolioGallery" class="portfolio-lightbox"
@@ -508,7 +508,7 @@
           <!-- First aid -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-volunteer">
             <div class="portfolio-wrap">
-              <img src="assets/img/activities/first-aid/img/0.png" class="img-fluid" alt="" loading="lazy"/>
+              <img src="assets/img/activities/first-aid/img/0.png" class="img-fluid" alt="" />
               <div class="portfolio-links">
                 <a href="assets/img/activities/first-aid/first-aid-1.mp4" title="More details" loading="lazy"
                   data-gallery="portfolioGallery" class="portfolio-lightbox"
