--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                   data-glightbox="title: Weather Station; description: .project-desc1" data-desc-position="right"><i
                     class="bx bx-info-circle"></i></a>
                 <div class="glightbox-desc project-desc1">
-                  <video class="d-none d-lg-block" width="240" height="180" controls muted autoplay loop>
+                  <video class="d-none d-lg-block" width="240" height="180" controls muted >
                     <source src="assets/img/activities/weather-station/weather-station.mp4" type="video/mp4" />
                   </video>
                   <p class="mt-3">
