--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <header id="header">
     <div class="d-flex flex-column">
       <div class="profile d-block d-md-none">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle" loading="lazy"/>
+        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle" />
         <h1 class="text-light"><a href="index.html">Phan Trung Kiet</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="mailto:kietpt8627@gmail.com" target="_blank" class="email"><i class="bx bx-envelope"></i></a>
@@ -142,7 +142,7 @@
 
         <div class="row justify-content-between">
           <div class="col-md-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid dim" alt="" loading="lazy"/>
+            <img src="assets/img/profile-img.jpg" class="img-fluid dim" alt="" />
           </div>
           <div class="col-md-8 pt-4 pt-md-0 content" data-aos="fade-left">
             <h3>Profile</h3>
@@ -413,7 +413,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/activities/weather-station/weather-station.png" class="img-fluid" alt="" />
               <div class="portfolio-links">
-                <a href="assets/img/activities/weather-station/weather-station.png" title="More details" loading="lazy"
+                <a href="assets/img/activities/weather-station/weather-station.png" title="More details" 
                   data-gallery="portfolioGallery" class="portfolio-lightbox"
                   data-glightbox="title: Weather Station; description: .project-desc1" data-desc-position="right"><i
                     class="bx bx-info-circle"></i></a>
@@ -439,7 +439,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/activities/robotics/img/robot.png" class="img-fluid" alt="" />
               <div class="portfolio-links">
-                <a href="assets/img/activities/robotics/run/half-run.gif" loading="lazy" data-gallery="portfolioGallery"
+                <a href="assets/img/activities/robotics/run/half-run.gif"  data-gallery="portfolioGallery"
                   class="portfolio-lightbox" data-glightbox="title: NRC 2023; description: .robotics-desc"><i
                     class="bx bx-info-circle"></i></a>
                 <div class="glightbox-desc robotics-desc">
@@ -449,12 +449,12 @@
                   </p>
 
                   <div class="scroll-container">
-                    <img src="assets/img/activities/robotics/img/grab&lift.jpg" title="Grab & lift mechanism" loading="lazy">
-                    <img src="assets/img/activities/robotics/img/bottom-view.png" title="Bottom view of the robot" loading="lazy">
+                    <img src="assets/img/activities/robotics/img/grab&lift.jpg" title="Grab & lift mechanism" >
+                    <img src="assets/img/activities/robotics/img/bottom-view.png" title="Bottom view of the robot" >
                     <img src="assets/img/activities/robotics/img/CEs.png"
-                      title="New (left) and old (right) versions of construction equipment" loading="lazy">
-                    <img src="assets/img/activities/robotics/run/newCE.gif" title="Using new construction equipment" loading="lazy">
-                    <img src="assets/img/activities/robotics/cert/cert.jpg" title="Certification" loading="lazy">
+                      title="New (left) and old (right) versions of construction equipment" >
+                    <img src="assets/img/activities/robotics/run/newCE.gif" title="Using new construction equipment" >
+                    <img src="assets/img/activities/robotics/cert/cert.jpg" title="Certification" >
                   </div>
                 </div>
 
@@ -469,7 +469,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/activities/kitchen/volunteer.png" class="img-fluid" alt="" />
               <div class="portfolio-links">
-                <a href="assets/img/activities/kitchen/volunteer.png" title="More details" loading="lazy"
+                <a href="assets/img/activities/kitchen/volunteer.png" title="More details" 
                   data-gallery="portfolioGallery" class="portfolio-lightbox"
                   data-glightbox="title: Volunteer; description: .volunteer-desc1"><i class="bx bx-info-circle"></i></a>
                 <div class="glightbox-desc volunteer-desc1">
@@ -487,7 +487,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/activities/first-aid/img/0.png" class="img-fluid" alt="" />
               <div class="portfolio-links">
-                <a href="assets/img/activities/first-aid/first-aid-1.mp4" title="More details" loading="lazy"
+                <a href="assets/img/activities/first-aid/first-aid-1.mp4" title="More details" 
                   data-gallery="portfolioGallery" class="portfolio-lightbox"
                   data-glightbox="title: Volunteer; description: .volunteer-desc2"><i class="bx bx-info-circle"></i></a>
                 <div class="glightbox-desc volunteer-desc2">
@@ -504,8 +504,8 @@
                     <video controls muted>
                       <source src="assets/img/activities/first-aid/first-aid-2.mp4" type="video/mp4" />
                     </video>
-                    <img src="assets/img/activities/first-aid/img/0.png" loading="lazy">
-                    <img src="assets/img/activities/first-aid/img/1.jpg" loading="lazy">
+                    <img src="assets/img/activities/first-aid/img/0.png" >
+                    <img src="assets/img/activities/first-aid/img/1.jpg" >
                   </div>
                 </div>
               </div>
